src/scss/components/_affiliate-logo.scss
.affiliate-logo-wrapper {
  display: block;
  float: left;
  width: 33%;
  border-right: 1px solid $neutral-color-3;

  @media(min-width: 768px) {
    width: auto;
  }

  &:last-child {
    border: none;

    .affiliate-logo {
      border: none;
    }
  }
}

.affiliate-logo {
  height: 36px;
  width: 77px;
  background: url(../images/sprite.png) no-repeat;
  display: block;
  margin-left: auto;
  margin-right: auto;
  @media(min-width: 768px) {
    margin: 0;
  }
}

.humanitarian-response {
background-position: -2px 6px;
  @media(min-width: 768px) {
    background-position: 0 6px;
  }
}

.relief-web {
  width: 78px;
  background-position: 0px -36px;
  @media(min-width: 768px) {
    width: 94px;
    background-position: 10px -36px;
  }

}

.hdx {
  background-position: 10px -78px;
}

